@@ -47,6 +47,7 @@ using namespace std;
 #include <Bpp/Seq/Io/Maf.all>
 #include "OutputAsFeaturesMafIterator.h"
 #include "SystemCallMafIterator.h"
+#include "TreeBuildingSystemCallMafIterator.h"
 
 //From boost:
 #include <boost/iostreams/device/file.hpp>
@@ -78,6 +79,7 @@ using namespace boost::iostreams;
 #include <Bpp/Phyl/Distance.all>
 #include <Bpp/Phyl/Io/BppOSubstitutionModelFormat.h>
 #include <Bpp/Phyl/Io/BppORateDistributionFormat.h>
+#include <Bpp/Phyl/Io/BppOTreeReaderFormat.h>
 #include <Bpp/Phyl/App/PhylogeneticsApplicationTools.h>
 
 using namespace bpp;
@@ -1088,6 +1090,40 @@ int main(int args, char** argv)
         currentIterator = iterator;
         its.push_back(iterator);
       }
+
+
+
+      // +-----------------------------------+
+      // | External phylogeny reconstruction |
+      // +-----------------------------------+
+      else if (cmdName == "ExternalTreeBuilding") {
+        string name = ApplicationTools::getStringParameter("name", cmdArgs, "external");
+        
+        string programInputFile = ApplicationTools::getAFilePath("input.file", cmdArgs, true, false);
+        string programInputFormat = ApplicationTools::getStringParameter("input.format", cmdArgs, "Fasta");
+        BppOAlignmentWriterFormat bppoWriter(1);
+        OAlignment* alnWriter(bppoWriter.read(programInputFormat));
+
+        string programOutputFile = ApplicationTools::getAFilePath("output.file", cmdArgs, true, false);
+        string programOutputFormat = ApplicationTools::getStringParameter("output.format", cmdArgs, "Newick");
+        BppOTreeReaderFormat bppoReader(1);
+        ITree* treeReader(bppoReader.read(programOutputFormat));
+
+        string propertyName = ApplicationTools::getStringParameter("property_name", cmdArgs, "ExternalTree");
+        ApplicationTools::displayResult("-- Registering block-wise trees to", propertyName);
+
+        string command = ApplicationTools::getStringParameter("call", cmdArgs, "echo \"TODO: implement wrapper!\"");
+        
+        ApplicationTools::displayResult("-- External call (tree building)", name);
+        ApplicationTools::displayResult("   Command", command);
+
+        TreeBuildingSystemCallMafIterator* iterator = new TreeBuildingSystemCallMafIterator(currentIterator, alnWriter, programInputFile, treeReader, programOutputFile, command, propertyName);
+
+        iterator->setLogStream(&log);
+        currentIterator = iterator;
+        its.push_back(iterator);
+      }
+
 
 
 
